k8s/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: whosup
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/lxysophie/whosup/backend:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /api/activities?size=1
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/activities?size=1
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: whosup
spec:
  selector:
    app: backend
  ports:
    - port: 8080
      targetPort: 8080
